Fix image dialog not scrollable on small screens

--- a/addons/cona_config/static/src/css/cona_01_theme.css
+++ b/addons/cona_config/static/src/css/cona_01_theme.css
@@ -90,7 +90,7 @@ p a, span a {
     vertical-align: middle;
 }
 .modal-open .modal {
-  overflow: visible; }
+  overflow: auto; }
 
 .modal {
   position: absolute; }
